--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Houses#index</h1>
-<p>Find me in app/views/houses/index.html.erb</p>
+<% @houses.each do |house| %>
+  <p><%= house.name %></p>
+  <%= image_tag "http://www.itamichintai.com/01zoom.jpg", width: 200 , height: 200 %>
+  <p>所在地: <%= house.address %></p>
+  <p><%= number_to_currency(house.price) %></p>
+  <%= link_to 'Read More', house_path(house) %>
+<% end %>
