--- a/app/assets/stylesheets/houses.scss
+++ b/app/assets/stylesheets/houses.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the Houses controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.houses {
+  .house-box {
+    border: solid 5px;
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+
+    .house-name {font-size: 24px;}
+
+    .house-image {margin: 10px;}
+
+    .house-address {}
+  }
+}
