--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Houses#new</h1>
-<p>Find me in app/views/houses/new.html.erb</p>
+<div class="row">
+  <div class="col-md-12">
+    <%= render 'form' %>
+  </div>
+</div>
