--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -11,5 +11,24 @@
 
     <hr>
     <%= link_to 'Edit', edit_house_path(@house), class: "btn btn-default" %>
+    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete-house">Delete</button>
+  </div>
+</div>
+
+<div class="modal fade" id="delete-house">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">物件情報の削除</h4>
+      </div>
+      <div class="modal-body">
+        <p><%= @house.name %>を削除しますか？</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
+        <%= link_to '削除する', @house, method: :delete, class: "btn btn-danger" %>
+      </div>
+    </div>
   </div>
 </div>
