--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -16,6 +16,17 @@
     <hr>
     <%= link_to 'Edit', edit_house_path(@house), class: "btn btn-default" %>
     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete-house">Delete</button>
+
+    <hr>
+    <%= form_for @comment do |f| %>
+      <div class="form-group">
+        <%= f.label :body, 'コメント' %><br>
+        <%= f.text_area :body %>
+      </div>
+      <%= f.hidden_field :house_id, value: @house.id %>
+      <%= f.submit '投稿する', class: "btn btn-default"  %>
+    <% end %>
+
   </div>
 </div>
 
