--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -25,6 +25,7 @@
           <p class="text-muted">
             投稿記事:<%= comment.created_at.strftime('%Y%m%d %H:%M') %>
           </p>
+          <%= link_to '削除', comment_path(comment.id) ,method: :delete %>
         </div>
       </div>
     <% end %>
